--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,10 +68,10 @@
         android:text="@string/signup_button"
         android:id="@+id/button2"
         android:layout_alignTop="@+id/button"
-        android:layout_alignRight="@+id/editText2"
-        android:layout_alignEnd="@+id/editText2"
-        android:layout_marginRight="45dp"
-        android:layout_marginEnd="45dp" />
+        android:layout_toRightOf="@+id/button"
+        android:layout_toEndOf="@+id/button"
+        android:layout_marginLeft="55dp"
+        android:layout_marginStart="55dp" />
 
     <TextView
         android:layout_width="wrap_content"
