--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/rollNumberTextInput"
         android:layout_marginTop="71dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -26,19 +26,19 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/editText"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
+        android:id="@+id/passwordText"
+        android:layout_below="@+id/rollNumberTextInput"
+        android:layout_alignLeft="@+id/rollNumberTextInput"
+        android:layout_alignStart="@+id/rollNumberTextInput"
         android:layout_marginTop="41dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/roll_label"
-        android:id="@+id/textView"
-        android:layout_above="@+id/editText2"
+        android:text="@string/login_pass"
+        android:id="@+id/passwordLabel"
+        android:layout_alignBottom="@+id/passwordText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -46,9 +46,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/login_pass"
-        android:id="@+id/textView2"
-        android:layout_alignBottom="@+id/editText2"
+        android:text="@string/roll_label"
+        android:id="@+id/rollNumberLabel"
+        android:layout_above="@+id/passwordText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -56,39 +56,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_button"
-        android:id="@+id/button"
+        android:id="@+id/loginButton"
         android:layout_marginTop="61dp"
-        android:layout_below="@+id/editText2"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_below="@+id/passwordText"
+        android:layout_toRightOf="@+id/rollNumberLabel"
+        android:layout_toEndOf="@+id/rollNumberLabel"
+        android:onClick="checkLogin" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/signup_button"
-        android:id="@+id/button2"
-        android:layout_alignTop="@+id/button"
-        android:layout_toRightOf="@+id/button"
-        android:layout_toEndOf="@+id/button"
+        android:id="@+id/signupButton"
+        android:layout_alignTop="@+id/loginButton"
+        android:layout_toRightOf="@+id/loginButton"
+        android:layout_toEndOf="@+id/loginButton"
         android:layout_marginLeft="55dp"
-        android:layout_marginStart="55dp" />
+        android:layout_marginStart="55dp"
+        android:onClick="goToSignUpActivity" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/forgot_string"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/button"
+        android:id="@+id/forgotPasswordLabel"
+        android:layout_below="@+id/loginButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp" />
+        android:layout_marginTop="45dp"
+        android:clickable="true"
+        android:onClick="gotoForgotPasswordActivity" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/welcome_text"
-        android:id="@+id/textView4"
+        android:id="@+id/welcomeLabel"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="29dp" />
