--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,7 +12,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign In?"
+        android:text="@string/forgotSignin"
         android:id="@+id/signInButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
