--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/passwordText"
+        android:id="@+id/passwordTextInput"
         android:layout_below="@+id/rollNumberTextInput"
         android:layout_alignLeft="@+id/rollNumberTextInput"
         android:layout_alignStart="@+id/rollNumberTextInput"
@@ -37,8 +37,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/login_pass"
-        android:id="@+id/passwordLabel"
-        android:layout_alignBottom="@+id/passwordText"
+        android:id="@+id/SignupPasswordLabel"
+        android:layout_alignBottom="@+id/passwordTextInput"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -47,8 +47,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/roll_label"
-        android:id="@+id/rollNumberLabel"
-        android:layout_above="@+id/passwordText"
+        android:id="@+id/SingnupRollNumberLabel"
+        android:layout_above="@+id/passwordTextInput"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -58,9 +58,9 @@
         android:text="@string/login_button"
         android:id="@+id/loginButton"
         android:layout_marginTop="61dp"
-        android:layout_below="@+id/passwordText"
-        android:layout_toRightOf="@+id/rollNumberLabel"
-        android:layout_toEndOf="@+id/rollNumberLabel"
+        android:layout_below="@+id/passwordTextInput"
+        android:layout_toRightOf="@+id/SingnupRollNumberLabel"
+        android:layout_toEndOf="@+id/SingnupRollNumberLabel"
         android:onClick="checkLogin" />
 
     <Button
