Database handled Only forgot password not working..

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -14,9 +14,85 @@
         android:layout_height="wrap_content"
         android:text="@string/forgotSignin"
         android:id="@+id/signInButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="41dp"
+        android:layout_marginBottom="67dp"
         android:onClick="gotoMainActivity"
-        android:nestedScrollingEnabled="true" />
+        android:nestedScrollingEnabled="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/forgotRoll"
+        android:id="@+id/forgotRollNumer"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="61dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/forgotNewPass"
+        android:id="@+id/newpass"
+        android:layout_below="@+id/forgotRollNumer"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="61dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/forgotConformPass"
+        android:id="@+id/confirm"
+        android:layout_below="@+id/newpass"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="53dp"
+        android:layout_toLeftOf="@+id/forgotNewPasswordField"
+        android:layout_toStartOf="@+id/forgotNewPasswordField" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/forgotRollnumberField"
+        android:layout_above="@+id/newpass"
+        android:layout_alignLeft="@+id/signInButton"
+        android:layout_alignStart="@+id/signInButton"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/forgotNewPasswordField"
+        android:layout_alignBottom="@+id/newpass"
+        android:layout_alignLeft="@+id/forgotRollnumberField"
+        android:layout_alignStart="@+id/forgotRollnumberField" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/forgotConfirmPasswordField"
+        android:layout_alignTop="@+id/confirm"
+        android:layout_toRightOf="@+id/confirm"
+        android:layout_toEndOf="@+id/confirm" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/forgotChangePassButton"
+        android:id="@+id/changePasswordButton"
+        android:layout_marginBottom="24dp"
+        android:onClick="changePassword"
+        android:layout_above="@+id/signInButton"
+        android:layout_toRightOf="@+id/forgotRollNumer"
+        android:layout_toEndOf="@+id/forgotRollNumer" />
 </RelativeLayout>
