--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -56,6 +56,7 @@
         android:layout_toStartOf="@+id/forgotNewPasswordField" />
 
     <EditText
+        android:hint="@string/hint_Roll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/forgotRollnumberField"
@@ -66,6 +67,7 @@
         android:layout_alignParentEnd="true" />
 
     <EditText
+        android:hint="@string/hint_Password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
